Fix header caption layout shift

--- a/components/Header/HeaderCaption/HeaderCaption.module.scss
+++ b/components/Header/HeaderCaption/HeaderCaption.module.scss
@@ -10,6 +10,7 @@
   align-items: center;
   font-family: "Merienda";
   font-weight: normal;
+  overflow: hidden;
 
   @include respond(notebook-768) {
     top: 58%;
